--- a/question3.html
+++ b/question3.html
@@ -31,7 +31,7 @@
         </select>
       </div>
       <div class="center">
-        <button onclick="">احسب</button>
+        <button onclick="changeCurr()">احسب</button>
       </div>
       <div class="center">
         <h3 id="newAmount">0</h3>
@@ -48,12 +48,25 @@
     <!-- ----------------------------------------------------------------- -->
 
     <script>
+      function changeCurr()
       // عرف الدالة
       {
         let amount = document.getElementById("amount").value;
         let sel = document.getElementById("country-list");
         let country = sel.value;
         let newAmount = 0;
+
+        if (country=="USA") {
+          newAmount = amount * 3.27 }
+
+         else if (country=="England") {
+          newAmount = amount * 2.52 }
+
+          else if (country=="UAE") {
+          newAmount =amount * 12.01 }
+
+          else if (country=="Turkey") {
+           newAmount =amount * 24.68}
         // country قم باستخدام الجمل الشرطية المناسبة لاختبار قيمة المتغير
         // USA هي county مثال: إن كانت قيمة
         // من الدينار الكويتي إلى الدولار الأمريكي amount قم بتحويل المبلغ
@@ -64,7 +77,7 @@
           UAE        amount * 12.01
           Turkey     amount * 24.68
         */
-      }
+          document.getElementById("newAmount").innerText=newAmount}
     </script>
   </body>
 </html>
